--- a/model/EA-SysML/new_version/doc/ea_sysml_report.tex
+++ b/model/EA-SysML/new_version/doc/ea_sysml_report.tex
@@ -204,9 +204,9 @@ the models that are not always using the same XMI definition.
   \input{behavior}
 
 % ----------------------------------------------------
-  \subsection{Test cases generation}
-  \label{subsec:test_generation}
-  \input{rttester}
+%  \subsection{Test cases generation}
+%  \label{subsec:test_generation}
+%  \input{rttester}
 
 
 \bibliographystyle{plain}
